--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialSubCategorias.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialSubCategorias.xhtml
@@ -103,23 +103,28 @@
 				<div class="modal loginDiv modal-dialog"
 					style="width: 300px">
 					<div class="modal-content">
-						<div class="modal-header">Modificar sub categoria</div>
+						<div class="modal-header">Modificar sub categoría</div>
 						<div class="modal-body">
 							<div class="row">
 								<div class="col-md-12 col-xs-10">
 									<h4>Datos de sub categoría</h4>
 									<p>
-										Nombre <h:inputText value="#{subCategoriaMB.currentSubCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+										Nombre 
+										<h:inputText id="nombreMod" value="#{subCategoriaMB.currentSubCategoria.nombre}" type="text" class="col-xs-7 form-control" required="true" requiredMessage="(obligatorio)" />
+										<h:message for="nombreMod" style="color:red" />
 									</p>
 									<p>
-										Descripcion <h:inputText value="#{subCategoriaMB.currentSubCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripción 
+										<h:inputText id="descripcionMod" value="#{subCategoriaMB.currentSubCategoria.descripcion}" type="text" class="col-xs-7 form-control" required="true" requiredMessage="(obligatorio)" />
+										<h:message for="descripcionMod" style="color:red" />
 									</p>
 									<p>
-										Habilitada <h:selectBooleanCheckbox value="#{subCategoriaMB.currentSubCategoria.habilitada}" type="checkbox"/>
+										Habilitada 
+										<h:selectBooleanCheckbox value="#{subCategoriaMB.currentSubCategoria.habilitada}" type="checkbox"/>
 									</p> 
 									<p>
-										Categoria
-										<h:selectOneMenu value="#{subCategoriaMB.currentSubCategoria.categoria.id}">
+										Categoría
+										<h:selectOneMenu value="#{subCategoriaMB.currentSubCategoria.categoria.id}" class="selectpicker">
 								   			<f:selectItems value="#{subCategoriaMB.listaCategorias}" var="c"
 								   			itemLabel="#{c.nombre}" itemValue="#{c.id}" />
 								   		</h:selectOneMenu>
@@ -130,7 +135,7 @@
 						<div class="modal-footer">
 								<h:message for="btnConfirmarModificacion" class="error" />
 								<h:commandButton class="btn" id="btnConfirmarModificacion" value="Confirmar" action="#{subCategoriaMB.editarSubCategoria}" />
-								<h:commandButton class="btn" value="Cancelar" action="#{subCategoriaMB.ocultarPanelEditar}" />
+								<h:commandButton immediate="true" class="btn" value="Cancelar" action="#{subCategoriaMB.ocultarPanelEditar}" />
 						</div>
 					</div>
 				</div>
@@ -148,19 +153,23 @@
 								<div class="col-md-12 col-xs-10">
 									<h4>Datos de sub categoría</h4>
 									<p>
-										Nombre <h:inputText value="#{subCategoriaMB.nuevaSubCategoria.nombre}" type="text" class="col-xs-7 form-control" />
+										Nombre 
+										<h:inputText id="nombreIng" value="#{subCategoriaMB.nuevaSubCategoria.nombre}" type="text" class="col-xs-7 form-control" required="true" requiredMessage="(obligatorio)"/>
+										<h:message for="nombreIng" style="color:red" />
 									</p>
 									<p>
-										Descripcion <h:inputText value="#{subCategoriaMB.nuevaSubCategoria.descripcion}" type="text" class="col-xs-7 form-control" />
+										Descripción 
+										<h:inputText id="descripcionIng" value="#{subCategoriaMB.nuevaSubCategoria.descripcion}" type="text" class="col-xs-7 form-control" required="true" requiredMessage="(obligatorio)" />
+										<h:message for="descripcionIng" style="color:red" />
 									</p>
 									<p>
-										Habilitada <h:selectBooleanCheckbox value="#{subCategoriaMB.nuevaSubCategoria.habilitada}" type="checkbox"/>
+										Habilitada 
+										<h:selectBooleanCheckbox value="#{subCategoriaMB.nuevaSubCategoria.habilitada}" type="checkbox" required="true" requiredMessage="(obligatorio)" />
 									</p>
 									<p>
-										Categoria
-										<h:selectOneMenu value="#{subCategoriaMB.nuevaSubCategoria.categoria.id}">
-								   			<f:selectItems value="#{subCategoriaMB.listaCategorias}" var="c"
-								   			itemLabel="#{c.nombre}" itemValue="#{c.id}" />
+										Categoría
+										<h:selectOneMenu value="#{subCategoriaMB.nuevaSubCategoria.categoria.id}" class="selectpicker" >
+								   			<f:selectItems value="#{subCategoriaMB.listaCategorias}" var="c" itemLabel="#{c.nombre}" itemValue="#{c.id}" />
 								   		</h:selectOneMenu>
 									</p>
 								</div>
@@ -169,7 +178,7 @@
 						<div class="modal-footer">
 							<h:message for="btnConfirmarIngreso" class="error" />
 							<h:commandButton class="btn" id="btnConfirmarIngreso" value="Confirmar" action="#{subCategoriaMB.crearSubCategoria}" />
-							<h:commandButton class="btn" value="Cancelar" action="#{subCategoriaMB.ocultarPanelIngreso}" />
+							<h:commandButton immediate="true" class="btn" value="Cancelar" action="#{subCategoriaMB.ocultarPanelIngreso}" />
 						</div>
 					</div>
 				</div>
@@ -199,8 +208,8 @@
 			</h:form>
 		</h:panelGroup>
 
-		<script>
-			$('.selectpicker').selectpicker();
+		<script>		
+		$('.selectpicker').selectpicker();
 		</script>
 	</ui:define>
 </ui:composition>
