--- a/index.html
+++ b/index.html
@@ -34,43 +34,20 @@
         <h3>
 <a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Bienvenidos a la pagina Oficial del MarketPlace - Tecnologo</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Descripción del Proyecto</p>
 
-<p>Descargate el proyecto:</p>
+<p>Podes descargar el código fuente y documentación del proyecto desde el enlace de mas arriba, o a través de tu consola Git con el siguiente comando:</p>
 
 <pre><code>$ git clone https://github.com/ORGTecnologo/7b6581PT.git
 </code></pre>
 
-<p>O esto:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
 <h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a name="autores-y-contribuyentes" class="anchor" href="#autores-y-contribuyentes"><span class="octicon octicon-link"></span></a>Autores</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>Andres Aldao (<a href="https://github.com/andrew5900" class="user-mention">@andrew5900</a>)</p>
+<p>Alejandro Fontes (<a href="https://github.com/pelo8888" class="user-mention">@pelo8888</a>)</p>
+<p>Mauricio Rodriguez (<a href=https://github.com/MRodriguez08" class="user-mention">@MRodriguez08</a>)</p>
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="autores-y-contribuyentes" class="anchor" href="#autores-y-contribuyentes"><span class="octicon octicon-link"></span></a>Autores y contribuyentes</h3>
-
-<p><a href="https://github.com/pelo8888" class="user-mention">@pelo8888</a></p>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
     </div>
 
