--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Bienvenidos a la pagina Oficial del MarketPlace - Tecnologo</h3>
-
-<p>Descripción del Proyecto</p>
-
+<a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Proyecto Final Marketplace</h3>
 <p>Podes descargar el código fuente y documentación del proyecto desde el enlace de mas arriba, o a través de tu consola Git con el siguiente comando:</p>
 
 <pre><code>$ git clone https://github.com/ORGTecnologo/7b6581PT.git
@@ -46,7 +43,7 @@
 
 <p>Andres Aldao (<a href="https://github.com/andrew5900" class="user-mention">@andrew5900</a>)</p>
 <p>Alejandro Fontes (<a href="https://github.com/pelo8888" class="user-mention">@pelo8888</a>)</p>
-<p>Mauricio Rodriguez (<a href=https://github.com/MRodriguez08" class="user-mention">@MRodriguez08</a>)</p>
+<p>Mauricio Rodriguez (<a href="https://github.com/MRodriguez08" class="user-mention">@MRodriguez08</a>)</p>
 
       </section>
     </div>
