--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Proyecto Final Marketplace</h3>
+<a name="bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo" class="anchor" href="#bienvenidos-a-la-pagina-oficial-del-marketplace---tecnologo"><span class="octicon octicon-link"></span></a>Proyecto Final</h3>
 <p>Podes descargar el código fuente y documentación del proyecto desde el enlace de mas arriba, o a través de tu consola Git con el siguiente comando:</p>
 
 <pre><code>$ git clone https://github.com/ORGTecnologo/7b6581PT.git
 </code></pre>
+
+<h3>
+<a name="Descripcion-del-proyecto" class="anchor" href="#Descripcion-del-proyecto"><span class="octicon octicon-link"></span></a>Descripcion del proyecto</h3>
+<p>
+  
+  
+</p>
 
 <h3>
 <a name="autores-y-contribuyentes" class="anchor" href="#autores-y-contribuyentes"><span class="octicon octicon-link"></span></a>Autores</h3>
