--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/admin.xhtml
@@ -54,37 +54,37 @@
 	  			<li style="text-align: center;"><h3>Administración</h3></li>
 	  			<li role="presentation" class="divider"></li>
 	  			<li role="presentation">
-			  		<a role="menuitem" tabindex="-1" href="/SERVER-MODULE-PRESENTATION/index.html">Página de inicio</a>
+			  		<a role="menuitem" tabindex="-1" href="/index.html">Página de inicio</a>
 			  	</li>
 	  			<li role="presentation" class="divider"></li>
 	  			<li class="dropdown-submenu">
 	    			<a tabindex="-1" href="#">Gestion de usuarios</a>
 		    			<ul class="dropdown-menu">
-				      		<li><a tabindex="-1" href="/SERVER-MODULE-PRESENTATION/admin/partialUsuarios.xhtml">Usuarios</a></li>      
-					      	<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialAdministrador.xhtml">Registrar administrador</a></li>
-					      	<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialCambiarContrasenia.xhtml">Cambiar contraseña</a></li>
+				      		<li><a tabindex="-1" href="/admin/partialUsuarios.xhtml">Usuarios</a></li>      
+					      	<li><a href="/admin/partialAdministrador.xhtml">Registrar administrador</a></li>
+					      	<li><a href="/admin/partialCambiarContrasenia.xhtml">Cambiar contraseña</a></li>
 					    </ul>
 				</li>
 	  			<li class="dropdown-submenu">
 	    			<a tabindex="-1" href="#">Gestión de contenidos</a>
 					    <ul class="dropdown-menu">
-				      		<li><a tabindex="-1" href="/SERVER-MODULE-PRESENTATION/admin/partialContenidos.xhtml">Contenidos</a></li>      
-					      	<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialComentarios.xhtml">Comentarios</a></li>
-					      	<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialReclamos.xhtml">Reclamos</a></li>
+				      		<li><a tabindex="-1" href="/admin/partialContenidos.xhtml">Contenidos</a></li>      
+					      	<li><a href="/admin/partialComentarios.xhtml">Comentarios</a></li>
+					      	<li><a href="/admin/partialReclamos.xhtml">Reclamos</a></li>
 					    </ul>
 				</li>
 	  			<li class="dropdown-submenu">
 				    <a tabindex="-1" href="#">Configuración</a>
 				    	<ul class="dropdown-menu">
-			      			<li><a tabindex="-1" href="/SERVER-MODULE-PRESENTATION/admin/partialCategorias.xhtml">Categorías</a></li>      
-				      		<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialSubCategorias.xhtml">Subcategorías</a></li>
-				      		<li><a href="/SERVER-MODULE-PRESENTATION/admin/partialParametros.xhtml">Parámetros</a></li>
+			      			<li><a tabindex="-1" href="/admin/partialCategorias.xhtml">Categorías</a></li>      
+				      		<li><a href="/admin/partialSubCategorias.xhtml">Subcategorías</a></li>
+				      		<li><a href="/admin/partialParametros.xhtml">Parámetros</a></li>
 				    	</ul>
 			  	</li>
 				<li class="dropdown-submenu">
 	    			<a tabindex="-1" href="#">Auditoría</a>
 	    				<ul class="dropdown-menu">
-	      					<li><a tabindex="-1" href="/SERVER-MODULE-PRESENTATION/admin/partialAuditoria.xhtml">Registro de accesos</a></li>
+	      					<li><a tabindex="-1" href="/admin/partialAuditoria.xhtml">Registro de accesos</a></li>
 	    				</ul>
 	  				</li>
 	  			<li role="presentation" class="divider"></li>
