--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialContenidos.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialContenidos.xhtml
@@ -52,14 +52,14 @@
 
 							<h:column>
 								<f:facet name="header">Nombre</f:facet>
-								<a href="/SERVER-MODULE-PRESENTATION/views/content.html?id=#{o.idContenido}" target="_blank">
+								<a href="/views/content.html?id=#{o.idContenido}" target="_blank">
 	                           		#{o.nombreContenido}
 	                           	</a>
 		                   	</h:column>
 
 							<h:column>
 								<f:facet name="header">Proveedor</f:facet>
-								<a target="_blank" href="/SERVER-MODULE-PRESENTATION/views/perfil.html?nick=#{o.proveedor}">#{o.proveedor}</a>
+								<a target="_blank" href="/views/perfil.html?nick=#{o.proveedor}">#{o.proveedor}</a>
 							</h:column>
 							
 							<h:column >
