--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialUsuarios.xhtml
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/admin/partialUsuarios.xhtml
@@ -54,7 +54,7 @@
 
 						<h:column>
 							<f:facet name="header">Usuario</f:facet>
-							<a target="_blank" href="/SERVER-MODULE-PRESENTATION/views/perfil.html?nick=#{o.usuario}">#{o.usuario}</a>
+							<a target="_blank" href="/views/perfil.html?nick=#{o.usuario}">#{o.usuario}</a>
 						</h:column>
 						<h:column>
 							<f:facet name="header">Email</f:facet>
